--- a/style.css
+++ b/style.css
@@ -4,55 +4,300 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Poppins', sans-serif;
+}
+
+/* header */
+
+.main-header{
+    width: 100%;
+    padding: 0 1.25rem;
+    background-color: white;
+    color: #BC1823;
+    z-index: 1;
+}
+
+.header-content{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    height: 3.725rem;
+    max-width: 80rem;
+    margin: 0 auto;
+}
+
 a{
     text-decoration: none;
-    color: black;
-    transition: 0.3s;
+    color: #BC1823;
 }
 
-.logo{
-    font-size: 2em;
+.topics{
+    list-style-type: none;
+    display: none;
+    gap: 1.563rem;
+}
+
+.topics li{
+    position: relative;
+    font-size: 0.875rem;
+    font-weight: 600;
     text-transform: uppercase;
-    letter-spacing: 4px;
+    cursor: pointer;
+    
 }
 
-nav{
+li::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #BC1823;
+    bottom: -0.2rem;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+}
+
+li:hover::before{
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.logo img{
+    width: 5.5rem;
+    cursor: pointer;
+    margin: 2em;
+}
+
+/* banner */
+
+.banner{
+    padding: 2.5rem 0;
+    position: relative;
+    background-color: #BC1823;
+    max-height: 60vh;
+}
+
+.content{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    height: 8vh;
+    flex-direction: column;
+    max-width: calc(100% - 1.25rem);
+    margin: 0 auto;
+    height: 100%;
+    position: relative;
 }
 
-nav img{
-    width: 5em;
+.banner-img{
+   position: relative;
+   z-index: 1;
+   width: 31rem;
+   margin-bottom: 1.25rem;
 }
 
-.nav-list{
-    letter-spacing: 0.2em;
-    margin-left: 2em;
+.text-content{
+   color: rgb(255, 255, 255);
+   text-align: center;
+   display: flex; 
+   flex-direction: column;
+   align-items: left;
+   margin-bottom: 2em;
+   text-align: left;
+}
+
+#title{
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1;
+    max-width: 30rem;
+    margin-bottom: 1.25rem;
+    text-align: left;
+}
+
+#copy-text{
+    max-width: 18.75rem;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    margin-bottom: 1.25rem;
+}
+
+ .text-content strong{
+    color: #92B63E;
+}
+
+
+.banner-2{
+    padding: 2.5rem 0;
+    position: relative;
+    max-height: 60vh;
+}
+
+.text-content-2{
     display: flex;
-    list-style: none;
+    text-align: center;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
 }
 
-.nav-list li{
-    margin-left: 1em;
+#title-2{
+    margin-bottom: 2rem;
+    font-size: 3rem;
+    color: #BC1823;
 }
 
-.mobile-menu{
-    display: none;
-    cursor: pointer;
+#copy-text-2{
+    font-size: 1.3rem;
 }
 
-.mobile-menu div{
-    width: 2em;
-    height: 0.5em;
-    margin: 8px;
-    transition: 0.3s;
+.logo-2{
+    display: flex;
+    justify-content: center;
+    height: 10rem;
+}
+
+.footer-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #BC1823;
+    height: 2rem;
+    color: white;
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+
+/* sm */
+
+@media only screen and (min-width: 440px) {
+
+    .banner{
+        padding: 2.5rem 0;
+        position: relative;
+        background-color: #BC1823;
+        max-height: 100vh;
+    }
+
+    .logo img{
+        width: 5em;
+        flex-direction: row-reverse;
+    }
+
+    .text-content{
+        align-items: center;
+    }
+
+    #title{
+        text-align: center;
+    }
+
+
 
 }
 
-main{
-    width: 50px;
-    background-color: #BC1823;
+/* md */
+
+@media only screen and (min-width: 768px){
+
+    .banner{
+        padding: 2.5rem 0;
+        position: relative;
+        background-color: #BC1823;
+        max-height: 90vh;
+    }
+
+    .header-content{
+        height: 5rem;
+    } 
+
+    .topics{
+        display: flex;
+    }
+
+    .logo img{
+        width: 8rem;
+        left: 50%;
+        transform: translatex(-50%);  
+    }
+
+    .banner{
+        height: calc(100vh - 5rem);
+    }
+
+}
+
+/* lg */
+
+@media only screen and (min-width: 1024px){
+
+    .main-header{
+        padding: 0 2.5rem
+    }
+
+    .logo img{
+        width: 8em;
+    }
+    
+    .content{
+        flex-direction: row;
+    }
+
+    .banner{
+        padding: 2.5rem 0;
+        position: relative;
+        background-color: #BC1823;
+        max-height: 60vh;
+    }
+
+}
+
+/* xl */
+
+@media only screen and (min-width: 1536px) {
+
+    .banner{
+        padding: 2.5rem 0;
+        position: relative;
+        background-color: #BC1823;
+        max-height: 60vh;
+    }
+
+    .content{
+        max-width: 90rem;
+    }
+
+    .banner-img{
+        width: 31rem;
+        margin-right: 3.75rem;
+        margin-top: 3.125rem;
+        margin-bottom: 0;
+    }
+    
+}
+
+/* xxl */
+
+@media only screen and (min-width: 1536px){
+
+    .banner{
+        padding: 2.5rem 0;
+        position: relative;
+        background-color: #BC1823;
+        max-height: 60vh;
+    }
+
+    .banner-img{
+        width: 31rem;
+        margin-right: 0;
+        margin-bottom: 0;
+    }
 }
