--- a/cadastro.css
+++ b/cadastro.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,13 +10,11 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
-/* header */
-
 .main-header{
     width: 100%;
     padding: 0 1.25rem;
-    background-color: white;
-    color: #BC1823;
+    background-color: #BC1823;
+    color: white;
     z-index: 1;
 }
 
@@ -30,7 +30,11 @@ body{
 
 a{
     text-decoration: none;
-    color: #BC1823;
+    color: white;
+}
+
+.label-topics, .checkbox{
+    display: none;
 }
 
 .topics{
@@ -39,17 +43,12 @@ a{
     gap: 1.563rem;
 }
 
-.label-topics, .checkbox{
-    display: none;
-}
-
 .topics li{
     position: relative;
     font-size: 0.875rem;
     font-weight: 600;
     text-transform: uppercase;
     cursor: pointer;
-    
 }
 
 li::before{
@@ -58,7 +57,7 @@ li::before{
     width: 100%;
     height: 4px;
     border-radius: 4px;
-    background-color: #BC1823;
+    background-color: white;
     bottom: -0.2rem;
     left: 0;
     transform-origin: right;
@@ -77,96 +76,145 @@ li:hover::before{
     margin: 2em;
 }
 
-/* banner */
+/* main */
 
 .banner{
-    padding: 2.5rem 0;
-    position: relative;
-    background-color: #BC1823;
-    max-height: 60vh;
-}
-
-.content{
+    height: 100vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    max-width: calc(100% - 1.25rem);
-    margin: 0 auto;
-    height: 100%;
-    position: relative;
+    color: #ffffff;
+    background: url(image/hamburguer-de-linguica.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 100% 30%;
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: color;
 }
 
-.banner-img{
-   position: relative;
-   z-index: 1;
-   width: 31rem;
-   margin-bottom: 1.25rem;
+/* form */
+
+.container-form{
+    width: 60%;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    border-radius: 1.5rem;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
 }
 
-.text-content{
-   color: rgb(255, 255, 255);
-   text-align: center;
-   display: flex; 
+.form{
+   width: 50%; 
+   display: flex;
    flex-direction: column;
-   align-items: left;
-   margin-bottom: 2em;
-   text-align: left;
+   justify-content: center;
+   align-items: center;
+   background-color: white;
+   padding: 3rem;
 }
 
-#title{
-    font-size: 3rem;
-    font-weight: 700;
-    line-height: 1;
-    max-width: 30rem;
-    margin-bottom: 1.25rem;
-    text-align: left;
-}
-
-#copy-text{
-    max-width: 18.75rem;
-    font-size: 0.875rem;
-    line-height: 1.5rem;
-    margin-bottom: 1.25rem;
-}
-
- .text-content strong{
-    color: #92B63E;
-}
-
-
-.banner-2{
-    padding: 2.5rem 0;
-    position: relative;
-    max-height: 60vh;
-}
-
-.text-content-2{
+.form-header{
+    margin-bottom: 3rem;
     display: flex;
-    text-align: center;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    width: 70%;
-    margin: 0 auto;
-    position: relative;
+    justify-content: space-between;
 }
 
-#title-2{
-    margin-bottom: 2rem;
-    font-size: 3rem;
+.login-button{
+    display: flex;
+    align-items: center;
+}
+
+.login-button button{
+   border: none;
+   background-color: #BC1823;
+   padding: 0.4rem 1rem; 
+   border-radius: 5px;
+   cursor: pointer;
+   
+}
+
+.login-button button:hover{
+    background-color: #680108;
+}
+
+.title{
     color: #BC1823;
 }
 
-#copy-text-2{
-    font-size: 1.3rem;
+.login-button button a{
+    text-decoration: none;
+    font-weight: bold;
+    color: white
 }
 
-.logo-2{
-    display: flex;
-    justify-content: center;
-    height: 10rem;
+.form-header h1::after{
+    content: '';
+    display: block;
+    width: 3rem;
+    height: 0.3rem;
+    background-color: #BC1823;
+    margin: 0 auto;
+    position: absolute;
+    border-radius: 10px;
 }
+
+.input-group{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+.input-box{
+   display: flex;
+   flex-direction: column;
+   margin-bottom: 1.1rem; 
+}
+
+.input-box input{
+    margin: 0.6rem 0;
+    padding: 0.8rem 0.5rem;
+    border: none;
+    border-radius: 5px; 
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.445);
+}
+
+.input-box input:focus-visible{
+    outline: 2px solid #BC1823;
+}
+
+.input-box label, h6{
+    font-size: 0.75rem;
+    font-weight: bold;
+    color: black;
+}
+
+.input-box input::placeholder{
+    color: black;
+}
+
+.continue-button button{
+    width: 100%;
+    margin-top: 2.25rem;
+    border: none;
+    background-color: #BC1823;
+    padding: 0.62rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.continue-button button:hover{
+    background-color: #680108;
+}
+
+.continue-button button a{
+    text-decoration: none;
+    color: white;
+}
+
+/* footer */
 
 .footer-content{
     display: flex;
@@ -184,38 +232,12 @@ li:hover::before{
 
 @media only screen and (min-width: 440px) {
 
-    .banner{
-        padding: 2.5rem 0;
-        position: relative;
-        background-color: #BC1823;
-        max-height: 100vh;
-    }
-
-    .logo img{
-        width: 5em;
-        flex-direction: row-reverse;
-    }
-
-    .text-content{
-        align-items: center;
-    }
-
-    #title{
-        text-align: center;
-    }
-
+   
 }
 
 /* md */
 
 @media only screen and (min-width: 768px){
-
-    .banner{
-        padding: 2.5rem 0;
-        position: relative;
-        background-color: #BC1823;
-        max-height: 90vh;
-    }
 
     .header-content{
         height: 5rem;
@@ -230,25 +252,6 @@ li:hover::before{
         left: 50%;
         transform: translatex(-50%);  
     }
-
-    .banner{
-        height: calc(100vh - 5rem);
-    }
-
-    .container{
-        width: 90%;
-        height: auto;
-    }
-
-    .input-group{
-        flex-direction: column;
-        overflow-y: scroll;
-        flex-wrap: nowrap;
-        max-height: 17rem;
-        padding-right: 5rem;
-    }
-
-
 
 }
 
@@ -268,60 +271,30 @@ li:hover::before{
         flex-direction: row;
     }
 
-    .banner{
-        padding: 2.5rem 0;
-        position: relative;
-        background-color: #BC1823;
-        max-height: 60vh;
-    }
-
-    
 
 }
 
 /* xl */
 
-@media only screen and (min-width: 1536px) {
-
-    .banner{
-        padding: 2.5rem 0;
-        position: relative;
-        background-color: #BC1823;
-        max-height: 60vh;
+@media only screen and (max-width: 1536px) {
+    .container{
+        width: 90%;
+        height: auto;
     }
 
-    .content{
-        max-width: 90rem;
+    .input-group{
+        flex-direction: column;
+        overflow-y: scroll;
+        flex-wrap: nowrap;
+        max-height: 17rem;
+        padding-right: 5rem;
     }
-
-    .banner-img{
-        width: 31rem;
-        margin-right: 3.75rem;
-        margin-top: 3.125rem;
-        margin-bottom: 0;
-    }
-
-    
     
 }
 
 /* xxl */
 
-@media only screen and (max-width: 1200px){
-
-    .banner{
-        padding: 2.5rem 0;
-        position: relative;
-        background-color: #BC1823;
-        max-height: 100vh;
-    }
-
-    .banner-img{
-        width: 31rem;
-        margin-right: 0;
-        margin-bottom: 0;
-    }
-
+@media only screen and (max-width: 1536px){
     .logo img{
         width: 5em;
         flex-direction: row-reverse;
@@ -349,11 +322,11 @@ li:hover::before{
         position: absolute;
         top: 4rem;
         left: 0;
-        background: white;
+        background: #BC1823;
         text-align: center;
         width: 100%;
         height: 0vh;
-        z-index: 2;
+        z-index: 1;
         visibility: hidden;
         overflow-y: hidden;
         transition: 0.5s ease-in-out; 
@@ -368,7 +341,7 @@ li:hover::before{
         display: flex;
         align-items: center;
         gap: 0.5rem;
-        color: #BC1823;
+        color: white;
         padding: 1rem 0;
         cursor: pointer;
     }
